--- a/TODO
+++ b/TODO
@@ -1,7 +1,1 @@
-- Reduce code duplicaton
-- Audit all parsers (there are problems with descriptor loops)
-- Add more descriptors
-- Add descriptors generators/parsers/data types
-- Write documentation
-- Merge the examples
-- Collect weird test files
+- Collect more code to reduce code duplicaton across projects.
